# regulatory_processor_app

./: .gitignore  Document_Splitting_and_Parsing.py  README.md  README_FASTAPI.md  main.py  main_fastapi.py  pyproject.toml  requirements.txt  rxconfig.py
regulatory_processor/: __init__.py  config.py  date_formatter.py  default_mapping.py  document_splitter.py  document_utils.py  exceptions.py  file_manager.py  hyperlinks.py  local_rep_table_processor.py  mapping_table.py  processor.py  processor_core.py  processor_original_backup.py  regulatory_processor.py  utils.py
regulatory_processor/documentation_and_mapping/: README.md  complete_application_analysis.md  complete_function_flow_diagram.md  complete_module_summary.md  final_ouput.md  legacy_and_redundant_analysis.md  module_config.md  module_date_formatter.md  module_processor.md  module_regulatory_processor.md  module_utils.md
specs/document-processing-pipeline/: design.md  requirements.md  tasks.md
static/: app.js  index.html  style.css
