[project]
name = "regulatory-processor-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docx2pdf>=0.1.8",
    "fastapi>=0.118.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "reflex>=0.8.14.post1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
